--- a/src/index.css
+++ b/src/index.css
@@ -14,5 +14,5 @@ body{
     @apply w-11/12 mx-auto
 }
 .my-btn{
-    @apply bg-gradient-to-r from-indigo-400 to-purple-500 p-3 rounded text-white text-lg
+    @apply bg-gradient-to-r from-indigo-400 to-purple-500 p-3 rounded text-white text-lg hover:from-pink-500 hover:to-yellow-500
 }
